--- a/days15/html/index.html
+++ b/days15/html/index.html
@@ -41,11 +41,11 @@
 <!-- end navbar -->
 
     <!-- card blog -->
-<!-- {{#if messages.valid}} -->
+{{#if messages.valid}}
 <div class="alert alert-success" role="alert" style="width: 20%;">
   {{messages.valid}}
 </div>
-<!-- {{/if}} -->
+{{/if}}
     <section>
         <div class="container text-center p-2 contain-card">
             <div class="row">
