--- a/days15/html/login.html
+++ b/days15/html/login.html
@@ -40,11 +40,11 @@
 
 <!-- start form -->
 <div class="container rounded shadow mt-5" style="width: 500px;">
-    <!-- {{#if messages.danger}} -->
+    {{#if messages.danger}}
   <div class="alert alert-danger" role="alert">
     {{messages.danger}}
 </div>
-<!-- {{/if}} -->
+{{/if}}
 {{#if messages.valid}}
 <div class="alert alert-success" role="alert">
   {{messages.valid}}
