--- a/days15/html/index.html
+++ b/days15/html/index.html
@@ -41,11 +41,11 @@
 <!-- end navbar -->
 
     <!-- card blog -->
-<!-- {{#if messages.valid}} -->
-<div class="alert alert-success" role="alert" style="width: 20%;">
-  {{messages.valid}}
-</div>
-<!-- {{/if}} -->
+    {{#if messages.valid}}
+    <div class="alert alert-success" role="alert" style="width: 20%;">
+      {{messages.valid}}
+    </div>
+    {{/if}}
     <section>
         <div class="container text-center p-2 contain-card">
             <div class="row">
@@ -174,6 +174,6 @@
     <!-- end card blog -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script src="js/project.js"></script>
-    <script src="/days11/assets/js/contact.js"></script>
+    <script src="assets/js/contact.js"></script>
   </body>
 </html>
