--- a/days15/html/login.html
+++ b/days15/html/login.html
@@ -51,7 +51,7 @@
 </div>
 {{/if}}
     <form action="/login" method="post" class="p-3" >
-      <H1 class="text-center">LOGIN</H1>
+      <H1 class="text-center fs-2 pb-5">LOGIN TO YOUR ACCOUNT</H1>
       <div class="mb-3">
         <label for="email" class="form-label">Email address</label>
         <input type="email" class="form-control form-control-sm p-2" name="email" aria-describedby="emailHelp">
@@ -64,5 +64,7 @@
     </form>
     </div>
 <!-- start form -->
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
