--- a/days15/html/register.html
+++ b/days15/html/register.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <!-- bostrat link -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <!-- font awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 </head>
 <body>
@@ -39,7 +41,7 @@
   
   <!-- Start form -->
   <div class="container rounded shadow p-2 mt-5" style="width: 500px;">
-    {{#if messages.danger}}
+    {{#if messages.danger}} 
     <div class="alert alert-danger" role="alert">
       {{messages.danger}}
     </div>
@@ -52,7 +54,7 @@
     {{/if}}
     
     <form action="/register" method="post">
-      <h1 class="text-center">REGISTER</h1>
+      <h1 class="text-center fs-2 pb-5">REGISTER YOUR ACCOUNT</h1>
       <div class="mb-3 mt-5">
         <label for="name" class="form-label">Name</label>
         <input type="text" class="form-control form-control-lg p-2" name="name" aria-describedby="emailHelp">
@@ -69,5 +71,9 @@
     </form>
   </div>
   <!-- End form -->
+
+  <!-- script link-->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+  <!-- end script link-->
 </body>
 </html>
